--- a/jbake.properties
+++ b/jbake.properties
@@ -1,5 +1,5 @@
-site.host=http://jbake.org
-render.tags=false
+site.host=http://www.hjsoft.com/blog/
+render.tags=true
 render.sitemap=true
 template.index.file=index.gsp
 template.archive.file=archive.gsp
