--- a/jbake.properties
+++ b/jbake.properties
@@ -1,11 +1,12 @@
 site.host=http://www.hjsoft.com/blog/
+blog_title=John Flinchbaugh: Blog
 render.tags=true
 render.sitemap=true
-template.index.file=index.gsp
-template.archive.file=archive.gsp
-template.tag.file=tags.gsp
-template.sitemap.file=sitemap.gsp
-template.post.file=post.gsp
-template.page.file=page.gsp
-template.feed.file=feed.gsp
+template.index.file=index.tpl
+template.archive.file=archive.tpl
+template.tag.file=tags.tpl
+template.sitemap.file=sitemap.tpl
+template.post.file=post.tpl
+template.page.file=page.tpl
+template.feed.file=feed.tpl
 asciidoctor.attributes.export=true
