page titles all around

--- a/jbake.properties
+++ b/jbake.properties
@@ -1,5 +1,5 @@
 site.host=http://www.hjsoft.com/blog/
-blog_title=John Flinchbaugh: Blog
+blog_title=John Flinchbaugh
 render.tags=true
 render.sitemap=true
 template.index.file=index.tpl
