photo blog title/url

--- a/jbake.properties
+++ b/jbake.properties
@@ -1,5 +1,5 @@
-site.host=http://www.hjsoft.com/blog/
-blog_title=John Flinchbaugh
+site.host=http://blog.johnflinchbaugh.com/
+blog_title=John Flinchbaugh Photography Blog
 render.tags=true
 render.sitemap=true
 template.index.file=index.tpl
