--- a/jbake.properties
+++ b/jbake.properties
@@ -1,4 +1,5 @@
 site.host=http://blog.johnflinchbaugh.com/
+site.context=/
 blog_title=John Flinchbaugh Photography Blog
 render.tags=true
 render.sitemap=true
