--- a/jbake.properties
+++ b/jbake.properties
@@ -11,3 +11,4 @@ template.post.file=post.tpl
 template.page.file=page.tpl
 template.feed.file=feed.tpl
 asciidoctor.attributes.export=true
+tag.sanitize=true
