pull blog title from config

--- a/jbake.properties
+++ b/jbake.properties
@@ -1,6 +1,6 @@
 site.host=http://blog.johnflinchbaugh.com/
 site.context=/
-blog_title=John Flinchbaugh Photography
+blog.title=John Flinchbaugh Photography
 render.tags=true
 render.sitemap=true
 template.index.file=index.tpl
