--- a/jbake.properties
+++ b/jbake.properties
@@ -1,4 +1,4 @@
-site.host=http://blog.johnflinchbaugh.com/
+site.host=https://blog.johnflinchbaugh.com/
 site.context=/
 blog.title=John Flinchbaugh Photography
 render.tags=true
